Wip (#16)
* Rename .java to .kt

* Use Kotlin

* Add license

* Remove codeQL

* Rename .java to .kt

* WIP

* Rename .java to .kt

* WIP

---------

Co-authored-by: hfhbd <hfhbd@users.noreply.github.com>